add rating routes logic
